--- a/Resources/Styles/Main.css
+++ b/Resources/Styles/Main.css
@@ -14,3 +14,17 @@
 ::-webkit-scrollbar-thumb:hover {
     background-color:#a3a3a3; 
 }
+
+.center {
+    text-align: center;
+}
+
+#clock {
+    margin-left: 8px;
+}
+
+@media (max-width: 560px) {
+    #clock {
+        display: none;
+    }
+}
